<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/borrowLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".BorrowActivity">

    <TextView
        android:id="@+id/creditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cancelButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="Credits: 100"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="8dp"
        android:gravity="center"/>


    <TextView
        android:id="@+id/borrowTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Borrow Instrument"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="80dp"/>

    <ImageView
        android:id="@+id/borrowImage"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/borrowTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/borrowName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="24sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/borrowImage" />

    <EditText
        android:id="@+id/renterName"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        android:layout_marginTop="4dp"
        android:hint="Enter your name"
        android:minHeight="60dp"
        android:padding="12dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/borrowName" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="183dp"
        android:layout_height="66dp"
        android:text="Confirm Borrow"
        android:textSize="20sp"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/renterName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="183dp"
        android:layout_height="66dp"
        android:text="Cancel"
        android:padding="16dp"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/saveButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="0dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
